- Bug #1718: Fixed the bug that Gii may fail if the error handler or user component is customized in the main application (Qiang)
- Bug #1719: Fixed the bug that CActiveForm->focus was not working if enableAjaxValidation was set to false (mdomba)
- Bug: Fixed the bug that some HTTP requests may cause a PHP notice complaining HTTP_HOST undefined in CHttpRequest (Qiang)
- Enh #1419: CMaskedTextField, CAutoComplete, CStarRating, CJuiDatePicker, CJuiAutoComplete and CJuiSliderInput now can be used with tabular input (Sam Dark)
- Enh #1481: Added support for autoloading namespaced classes (Qiang)
- Enh #1522: The attributes of CDetailView now support the property 'visible' (Y!!)
- Enh #1546: Fixed the bug that disabling behaviors did not detach behavior event handlers (Qiang)
- Enh #1555: Added support to allow unloading/resetting an application component by calling CModule::setComponent() (Qiang)
- Enh #1561: Enhanced Gii tooltip feature to allow disable tooltips for certain input fields (Qiang)
- Enh #1599: Refactored CMultiFileUpload by extending from CInputWidget (Qiang)
- Enh #1560: Removed potential circular references in relational AR queries (Qiang)
- Enh #1578: Added support to parse AM/PM by CDateTimeParser (Qiang)
- Enh #1583: Upgraded HTMLPurifier to v4.2.0 (Sam Dark)
- Enh #1591: Fixed yiic.bat to make sure it works even if the path of PHP executable contains spaces (Qiang)
- Enh #1594: Added CWebLogRoute::ignoreAjaxInFireBug to make sure ajax calls work when showInFireBug is set to true (mdomba)
- Enh #1596: Added 'not' property to CRangeValidator and CRegularExpressionValidator in order to support inversion of the validation logic (Y!!)
- Enh #1598: Fixed CHttpRequest::getUserAgent() to make sure it works even if HTTP_USER_AGENT is not defined (Qiang)
- Enh #1607: Added CDbCache::setDbConnection (Qiang)
- Enh #1611: Added support for using composite keys in CActiveDataProvider (Qiang)